--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,13 @@
 - SV
 [X] Serverside Items Handling <-
-[ ] Chat handler (OOC/IC/Ranged) <--
+[X] Chat handler (OOC/IC/Ranged) <--
 [ ] Prop-protection
 [ ] Missing commands (a lot of them) <--
+[ ] Containers
 
 - CL
 [X] Clientside Inventory GUI <-
-[ ] Clientside Shop GUI <-
+[X] Clientside Shop GUI <-
 [ ] Missing Main Menu Compontents <-
 [ ] Chatbox <--
 
