--- a/todo.txt
+++ b/todo.txt
@@ -6,7 +6,9 @@
 - SV
 [X] Serverside Items Handling
 [X] Chat handler (OOC/IC/Ranged)
-[ ] Prop-protection
+[X] Prop-protection
+	[X] CPPI rather than intergrated
+	[-] Make CPPI fallback work decently without external
 [#] Missing commands (a lot of them)
 	[#] Administration
 	[X] Menu Handling
@@ -17,6 +19,7 @@
 [ ] Old Items
 [ ] SQL
 
+- Fix
 [ ] Find issue with job string
 [ ] Double disconnect message
 
@@ -24,7 +27,7 @@
 [X] Clientside Inventory GUI
 [X] Clientside Shop GUI
 [X] Clientside Container GUI
-[ ] Missing Main Menu Compontent
+[#] Missing Main Menu Compontent
 	[ ] Laws
 	[ ] Rules
 	[ ] Command help
