--- a/todo.txt
+++ b/todo.txt
@@ -29,6 +29,7 @@
 [-] Find a better way to do ExtraInit that doesn't require timers (fucking garry)
 [-] Fix unownable door-groups (master/slaves)
 [ ] Name validation, alpha only, length, ect
+[ ] Missing language strings (mainly commands, check using command)
 
 - Update / Improve
 [-] Remake HUD Design
