--- a/todo.txt
+++ b/todo.txt
@@ -15,7 +15,7 @@
 	[X] Chat Handling
 	[X] General RP Commands
 [X] Containers
-[-] Contraband
+[ ] Contraband
 [#] Old Items
 [ ] SQL
 
@@ -30,17 +30,19 @@
 [-] Fix unownable door-groups (master/slaves)
 [X] Name validation, alpha only, length, ect
 [-] Missing language strings (mainly commands, check using command)
-[ ] Make mayor salary change with tax
 [ ] Flipping cars restarts engine even if damaged.
 [ ] Fix car view offsets
 [ ] Disable firespread command
+[ ] Setowner for entire groups
 
 - Update / Improve
 [-] Remake HUD Design
 [X] Remake Derma Design
 [-] Chatbox (possibly bug ghosty to finish CBox)
-[ ] Engine notification
-[ ] Hunger notification
+[X] Engine notification
+[X] Hunger notification
+[-] Make mayor salary change with tax
+[ ] Move to NW3 or some other improved networking system
 
 - CL
 [X] Clientside Inventory GUI
