--- a/todo.txt
+++ b/todo.txt
@@ -43,6 +43,8 @@
 [X] Hunger notification
 [-] Make mayor salary change with tax
 [ ] Move to NW3 or some other improved networking system
+[ ] Petrol + garage for cars, locations per map
+[ ] Lockpicking
 
 - CL
 [X] Clientside Inventory GUI
@@ -79,6 +81,6 @@
 [-] Pickpocketing GUI (container that shows currently equiped weapons), use on chloroformed/sleeping
 
 - Finalising
-[ ] CLOSED-ALPHA (1 day closed testing for immediate, easily spottable errors) (12 Slots)
-[ ] ALPHA (2 days open testing for not so easily spottable errors) (16 Slots)
+[X] CLOSED-ALPHA (1 day closed testing for immediate, easily spottable errors) (12 Slots)
+[#] ALPHA (2 days open testing for not so easily spottable errors) (16 Slots)
 [ ] BETA (5 days open testing for underlying issues, small bugs, improvements ect) (24 Slots)
