More general updates

--- a/todo.txt
+++ b/todo.txt
@@ -35,6 +35,8 @@
 [X] Disable firespread command
 [ ] Setowner for entire groups
 [ ] Doors dont seem to network their name properly upon rejoining
+[ ] Client networking blows up on cl/sh reload, rejoining fixes it
+[ ] Chat handler is completely hacky, please fix
 
 [ ] Remake QDerma because trixter ripped off someone else's designs
 [X] Fists seem to be a bit (completely) borked
