just slight changes

--- a/todo.txt
+++ b/todo.txt
@@ -36,8 +36,8 @@
 [ ] Setowner for entire groups
 [X] Doors dont seem to network their name properly upon rejoining
 [X] Client networking blows up on cl/sh reload, rejoining fixes it
-[#] Chat handler is completely hacky, please fix
-[ ] You can see your own 'typing' text
+[X] Chat handler is completely hacky, please fix
+[X] You can see your own 'typing' text
 
 [ ] Remake QDerma because trixter ripped off someone else's designs
 [X] Fists seem to be a bit (completely) borked
