--- a/todo.txt
+++ b/todo.txt
@@ -51,8 +51,9 @@
 [X] Hunger notification
 [-] Make mayor salary change with tax
 [X] Move to NW3 or some other improved networking system
-[ ] Petrol + garage for cars, locations per map
+[X] Petrol + garage for cars, locations per map
 [#] Lockpicking
+[ ] Weapons should appear attached to player
 
 - CL
 [X] Clientside Inventory GUI
