--- a/todo.txt
+++ b/todo.txt
@@ -40,6 +40,7 @@
 [ ] A lot of the time you die in third person
 [ ] /engine on message duplicates
 [X] Fists seem to be a bit (completely) borked
+[ ] Steam name on a lot of rp stuff like cars
 
 - Update / Improve
 [-] Remake HUD Design
